syntax = "proto3";

package MiniGrpc.Common;

// MiniGrpc service
service MiniService {
  // Sends a greeting
  rpc Add (AddRequest) returns (AddResponse) {}

  // report position
  rpc ReportPosition (stream Position) returns (Note) {}
}

// The request message containing the user's name.
message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

// The response message containing the greetings
message AddResponse {
  int32 c = 1;
}

// position

message Position {
   double longitude = 1;
   double lattitude = 2;
}

message Note {
   string Message = 1;
}